--- a/style.css
+++ b/style.css
@@ -158,9 +158,9 @@
     background-image: url(https://raw.githubusercontent.com/d-arsya/resource/main/IG.PNG) ;
 }
 .telegram{
-    background-image: url(https://raw.githubusercontent.com/d-arsya/resource/main/TELE.PNG) ;
+    background-image: url(https://raw.githubusercontent.com/d-arsya/resource/main/TELE.png) ;
 }.gmail{
-    background-image: url(https://raw.githubusercontent.com/d-arsya/resource/main/GMAIL.PNG) ;
+    background-image: url(https://raw.githubusercontent.com/d-arsya/resource/main/GMAIL.png) ;
 }.whatsapp{
     background-image: url(https://raw.githubusercontent.com/d-arsya/resource/main/WA.PNG) ;
 }
