--- a/all.css
+++ b/all.css
@@ -187,7 +187,7 @@
     line-height: 3em;
     text-align: center;
     display: block;
-    height: 50px;
+    padding:5px;
     background-color: black;
 }
 .animasi{
