--- a/styleSecret.css
+++ b/styleSecret.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     color: black;
     text-decoration: none;
+    border: 0;
 }
 body{
     width: 100vw;
@@ -18,25 +19,33 @@ body{
 }
 .container{
     width: 700px;
-    /* background-color: rgb(255, 255, 255); */
     height: 100%;
     padding: 50px 30px 0px 30px;
     position: relative;
 }
+/*<<<<----TOP CARD---->>>>*/
 .topCard{
     border-radius: 10px 10px 0px 0px;
     padding: 20px 20px 5px 20px;
     margin: auto;
-    width: 90%;
+    width: 70%;
     background-color:rgb(223, 246, 255);
+    height: 200px;
+    position: absolute;
+    left: 15%;
+    z-index: -1;
+    animation: profile 2s;
 }
-.profile{
+@keyframes profile{
+    0%{top: 150px;}
+    100%{top: 40px;}
+}
+.bio{
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
     margin-bottom: 10px;
 }
-.igLink{font-family: 'Economica', sans-serif;font-size: 1.7em;}
 img{
     margin-right: 10px;
     width: 50px;
@@ -44,21 +53,50 @@ img{
 }
 .tip{color: rgb(141, 141, 141);}
 .tip span{color: rgb(141,141,141);}
+.igLink{font-family: 'Economica', sans-serif;font-size: 1.7em;color: black;text-decoration: none;}
+.btn {
+    display: inline-block;
+    margin-top: 5px;
+    width: 15px;
+    height: 15px;
+  }
+  .btn div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 15px;
+    height: 15px;;
+    border: solid rgb(223, 246, 255) 2px;
+    border-radius: 50%;
+    animation: btn 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+  }
+  .btn div:nth-child(1) {animation-delay: -0.45s;}
+  .btn div:nth-child(2) {animation-delay: -0.3s;}
+  .btn div:nth-child(3) {animation-delay: -0.15s;}
+  @keyframes btn {
+      0% {transform: rotate(0deg);}
+      100% {transform: rotate(360deg);}
+    }
+.hide{display: none;}
 .downCard{
+    box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
     background-color: rgb(6, 40, 61);
     border-radius: 0px 0px 20px 20px;
     padding: 30px;
+    position: relative;
+    top: 100px;
 }
 textarea{
     width: 100%;
     height: 90px;
     padding: 10px;
-    border:0;
     border-radius: 10px;
 }
 .submit{
     background-color: rgb(0, 0, 0);
-    border: 0;
     padding: 10px;
     border-radius: 10px;
     width: 100%;
@@ -79,6 +117,7 @@ textarea{
     color: whitesmoke;
     font-size: 1.2em;
 }
+#time{visibility: hidden;display: none;}
 .footerTip{
     font-family: "Economica";
     font-size: 1.3em;
@@ -91,11 +130,8 @@ textarea{
     border: 0;
     padding: 10px;
     border-radius: 10px;
-    width: 40%;
+    width: 100%;
     font-size: 1.4em;
-    margin: 50px 4% 0px 4%;
+    margin-top: 5%;
     color: white;
 }
-@media only screen and (max-width: 768px) {
-    
-  }
