--- a/styleSecret.css
+++ b/styleSecret.css
@@ -108,7 +108,7 @@ textarea{
     display: block;
     width: 100%;
     height: 60px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
 }
