--- a/styleSecret.css
+++ b/styleSecret.css
@@ -101,8 +101,9 @@ textarea{
     border-radius: 10px;
     width: 100%;
     font-size: 1.4em;
-    margin-top: 50px;
+    margin-top: 10px;
     color: white;
+    text-align: center;
 }
 .footer{
     display: block;
@@ -134,4 +135,5 @@ textarea{
     font-size: 1.4em;
     margin-top: 5%;
     color: white;
+    text-align: center;
 }
