--- a/styleSecret.css
+++ b/styleSecret.css
@@ -94,6 +94,7 @@ textarea{
     height: 90px;
     padding: 10px;
     border-radius: 10px;
+    font-size: 1.2em;
 }
 .submit{
     background-color: rgb(0, 0, 0);
