--- a/styleSecret.css
+++ b/styleSecret.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Bellota&family=Economica&display=swap');
-/* font-family: 'Economica', sans-serif; */
 *{
     font-family: 'Bellota', cursive;
     font-weight: 800;
@@ -89,6 +88,34 @@ img{
     position: relative;
     top: 100px;
 }
+.quoteCard{
+    box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
+    background-color: rgb(6, 40, 61);
+    border-radius: 10px;
+    padding: 10px 5px 10px 5px;
+    position: relative;
+    top: 120px;
+}
+.quote{
+    color: white;
+    text-align: center;
+    font-size: .85em;
+    animation: quote 3s;
+}
+.author{
+    margin-top: 10px;
+    color: grey;
+    font-style: italic;
+    text-align: center;
+    font-size: .95em;
+}
+.animeQuote{animation: quote 2s;}
+@keyframes quote{
+    0%{opacity: 0;}
+    100%{opacity: 100%;}
+}
 textarea{
     width: 100%;
     height: 90px;
@@ -118,6 +145,7 @@ textarea{
     text-align: center;
     color: whitesmoke;
     font-size: 1.2em;
+    display: none;
 }
 #time{visibility: hidden;display: none;}
 .footerTip{
