--- a/secretStyle.css
+++ b/secretStyle.css
@@ -147,7 +147,7 @@ textarea{
     font-size: 1.2em;
     display: none;
 }
-#time{visibility: hidden;display: none;}
+#device , #time{visibility: hidden;display: none;}
 .footerTip{
     font-family: "Economica";
     font-size: 1.3em;
