--- a/secretStyle.css
+++ b/secretStyle.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bellota&family=Economica&display=swap');
+:root{
+    --first : rgb(0, 0, 0);
+    --second : #880a0e;
+    --third : rgba(41, 155, 189, 0.781);
+}
 *{
     font-family: 'Bellota', cursive;
     font-weight: 800;
@@ -11,18 +16,20 @@
 }
 body{
     width: 100vw;
-    height: 100vh;
-    background-color: rgb(71, 181, 255);
+    height: 110vh;
+    background: rgb(0,7,36);
+background: linear-gradient(128deg, rgba(0,7,36,1) 0%, rgba(9,118,121,1) 41%, rgba(0,155,255,0.7455357142857143) 100%);
     display: flex;
     justify-content: center;
+    padding-bottom: 20px;
 }
 .container{
     width: 700px;
     height: 100%;
     padding: 50px 30px 0px 30px;
     position: relative;
-}
-/*<<<<----TOP CARD---->>>>*/
+  }
+  /*<<<<----TOP CARD---->>>>*/
 .topCard{
     border-radius: 10px 10px 0px 0px;
     padding: 20px 20px 5px 20px;
@@ -34,22 +41,25 @@ body{
     left: 15%;
     z-index: -1;
     animation: profile 2s;
-}
-@keyframes profile{
+    box-shadow: 0px 10px 4px 1px var(--third);
+    -webkit-box-shadow: 0px 3px 15px 1px var(--third);
+    -moz-box-shadow: 0px 3px 40px 1px var(--third);
+  }
+  @keyframes profile{
     0%{top: 150px;}
     100%{top: 40px;}
-}
+  }
 .bio{
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
     margin-bottom: 10px;
-}
+  }
 img{
     margin-right: 10px;
     width: 50px;
     border-radius: 25px;
-}
+  }
 .tip{color: rgb(141, 141, 141);}
 .tip span{color: rgb(141,141,141);}
 .igLink{font-family: 'Economica', sans-serif;font-size: 1.7em;color: black;text-decoration: none;}
@@ -77,22 +87,22 @@ img{
       0% {transform: rotate(0deg);}
       100% {transform: rotate(360deg);}
     }
-.hide{display: none;}
-.downCard{
+    .hide{display: none;}
+    .downCard{
     box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
     -webkit-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
     -moz-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
-    background-color: rgb(6, 40, 61);
+    background-color: var(--second);
     border-radius: 0px 0px 20px 20px;
     padding: 30px;
     position: relative;
     top: 100px;
-}
+  }
 .quoteCard{
     box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
     -webkit-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
     -moz-box-shadow: -1px -12px 53px -14px rgba(0,0,0,0.75);
-    background-color: rgb(6, 40, 61);
+    background-color: var(--second);
     border-radius: 10px;
     padding: 10px 5px 10px 5px;
     position: relative;
@@ -112,6 +122,102 @@ img{
     font-size: .95em;
 }
 .animeQuote{animation: quote 2s;}
+
+
+/*<<<<----isPost---->>>>*/
+.isPost{
+  display: block;
+  width: 100%;
+  height: 60px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
+label {
+  font-size: 13px;
+  color: #ffffff;
+  font-weight: 500;
+}
+
+.btn-color-mode-switch{
+  display: inline-block;
+  margin: 0px;
+  position: relative;
+}
+
+.btn-color-mode-switch > label.btn-color-mode-switch-inner{
+  margin: 0px;
+  width: 140px;
+  height: 30px;
+  background: var(--second);
+  border-radius: 26px;
+  overflow: hidden;
+  position: relative;
+  transition: all 0.3s ease;
+  display: block;
+}
+
+.btn-color-mode-switch > label.btn-color-mode-switch-inner:before{
+  content: attr(data-on);
+  position: absolute;
+  font-size: 12px;
+  font-weight: 500;
+  top: 7px;
+  right: 20px;
+
+}
+
+.btn-color-mode-switch > label.btn-color-mode-switch-inner:after{
+  content: attr(data-off);
+  width: 70px;
+  height: 16px;
+  border-radius: 26px;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  background: #000000;
+  text-align: center;
+  transition: all 0.3s ease;
+  box-shadow: 0px 0px 6px -2px #111;
+  padding: 5px 0px;
+}
+
+.btn-color-mode-switch > .alert{
+  display: none;
+  background: #FF9800;
+  border: none;
+  color: #fff;
+}
+
+.btn-color-mode-switch input[type="checkbox"]{
+  cursor: pointer;
+  width: 50px;
+  height: 25px;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  margin: 0px;
+}
+
+.btn-color-mode-switch input[type="checkbox"]:checked + label.btn-color-mode-switch-inner{
+  background: rgb(0, 242, 255);
+  color: rgb(0, 0, 0);
+}
+
+.btn-color-mode-switch input[type="checkbox"]:checked + label.btn-color-mode-switch-inner:after{
+  content: attr(data-on);
+  left: 68px;
+  background: #ffffff;
+}
+
+.btn-color-mode-switch input[type="checkbox"]:checked + label.btn-color-mode-switch-inner:before{
+  content: attr(data-off);
+  right: auto;
+  left: 20px;
+}
+
 @keyframes quote{
     0%{opacity: 0;}
     100%{opacity: 100%;}
@@ -134,7 +240,7 @@ textarea{
     text-align: center;
 }
 .footer{
-    display: block;
+    display: none;
     width: 100%;
     height: 60px;
     position: absolute;
