--- a/secretStyle.css
+++ b/secretStyle.css
@@ -15,8 +15,8 @@
     border: 0;
 }
 body{
+    height: 120vh;
     width: 100vw;
-    height: 110vh;
     background: rgb(0,7,36);
 background: linear-gradient(128deg, rgba(0,7,36,1) 0%, rgba(9,118,121,1) 41%, rgba(0,155,255,0.7455357142857143) 100%);
     display: flex;
@@ -129,8 +129,8 @@ img{
   display: block;
   width: 100%;
   height: 60px;
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  top: 55vh;
   left: 0;
   text-align: center;
 }
