--- a/secretStyle.css
+++ b/secretStyle.css
@@ -137,7 +137,7 @@ img{
 label {
   font-size: 13px;
   color: #ffffff;
-  font-weight: 500;
+  font-weight: 800;
 }
 
 .btn-color-mode-switch{
@@ -147,10 +147,11 @@ label {
 }
 
 .btn-color-mode-switch > label.btn-color-mode-switch-inner{
+  color: #000000;
   margin: 0px;
   width: 140px;
   height: 30px;
-  background: rgb(0, 242, 255);
+  background: rgb(4, 88, 109);
   border-radius: 26px;
   overflow: hidden;
   position: relative;
@@ -162,10 +163,10 @@ label {
   content: attr(data-on);
   position: absolute;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 300;
   top: 7px;
   right: 20px;
-
+  
 }
 
 .btn-color-mode-switch > label.btn-color-mode-switch-inner:after{
@@ -176,7 +177,7 @@ label {
   position: absolute;
   left: 2px;
   top: 2px;
-  background: #000000;
+  background: #ffffff;
   text-align: center;
   transition: all 0.3s ease;
   box-shadow: 0px 0px 6px -2px #111;
@@ -187,7 +188,7 @@ label {
   display: none;
   background: #FF9800;
   border: none;
-  color: #fff;
+  color: rgb(0, 0, 0);
 }
 
 .btn-color-mode-switch input[type="checkbox"]{
@@ -202,14 +203,14 @@ label {
 }
 
 .btn-color-mode-switch input[type="checkbox"]:checked + label.btn-color-mode-switch-inner{
+  color: rgb(255, 255, 255);
   background: var(--second);
-  color: rgb(0, 0, 0);
 }
 
 .btn-color-mode-switch input[type="checkbox"]:checked + label.btn-color-mode-switch-inner:after{
   content: attr(data-on);
   left: 68px;
-  background: #ffffff;
+  background: #000000;
 }
 
 .btn-color-mode-switch input[type="checkbox"]:checked + label.btn-color-mode-switch-inner:before{
