--- a/secretStyle.css
+++ b/secretStyle.css
@@ -126,7 +126,7 @@ img{
 
 /*<<<<----isPost---->>>>*/
 .isPost{
-  display: block;
+  display: none;
   width: 100%;
   height: 60px;
   position: relative;
